# metabase-cli

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/mbase/: client.py  config.py  main.py
src/mbase/api/: databases.py
src/mbase/auth/: manager.py
src/mbase/commands/: auth.py  config.py  database.py  table.py
src/mbase/formatters/: __init__.py  base.py  json.py  table.py
src/mbase/models/: config.py  database.py  field.py  table.py
src/metabase_cli/: client.py  config.py  main.py
src/metabase_cli/commands/: health.py
src/metabase_cli/formatters/: __init__.py  base.py  json.py  table.py  table.py,
src/metabase_cli/models/: common.py
tests/: test_auth_commands.py  test_client.py  test_config_commands.py  test_formatters.py  test_health_command.py
tests/commands/: test_database.py  test_table.py
